<resources>
    <string name="app_name">Add num</string>
    <string name="ver_1">ver.1</string>
    <string name="ontinue">Сontinue</string>
    <string name="exit">Exit</string>
    <string name="help">Help</string>
    <string name="world">World:</string>
    <string name="new_game">New Game</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
</resources>
